Fix a few incorrect arches in formulae that ryo_saeba spotted.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@22014 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fix some incorrect arches in the formula list
+formulae
+Daniel Hawkins 2021-03-01
+
 Adjust the spawn rate for literacy and use magic item scrolls.
 literacy chance 15 -> 8, use magic item chance 1 -> 8.
 Since barbarians no longer get UMI out-of-the-box, there
