--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Decrease probability of blue dragon scale for electric dragons.
+monster/dragon/Electric/elec_dr.trs
+Nicolas Weeger 2021-03-03
+
 Fix some incorrect arches in the formula list
 formulae
 Daniel Hawkins 2021-03-01
