Improve puddle appearances to be more transparent and less blue.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@22023 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Make puddles more transparent.
+ground/Weather/rain*.base.111.png
+Daniel Hawkins 2021-03-03
+
 Decrease probability of blue dragon scale for electric dragons.
 monster/dragon/Electric/elec_dr.trs
 Nicolas Weeger 2021-03-03
