Forgot to save ChangeLog before committing r22024. Commiting it now instead.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@22025 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+New art for deposit box in the cavalier perspective.
+Shifted old art to classic face set.
+misc/Container/close_dbox.base.111.png
+misc/Container/close_dbox.clsc.111.png
+misc/Container/depositbox.base.111.png
+misc/Container/depositbox.clsc.111.png
+Saiapatsu (art) and SilverNexus (classic faceset move, optimizing pngs) 2021-03-03
+
 Make puddles more transparent.
 ground/Weather/rain*.base.111.png
 Daniel Hawkins 2021-03-03
