--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Amend book message to use the prepare weapon scroll's face,
+per Nicholas Weeger's suggestion.
+messages
+Daniel Hawkins 2021-03-12
+
 Add new book message that describes using a Prepare Weapon scroll
 as an anecdote of an onlooker.
 messages
