New artifact weapon type, 'the Brute'. Allows for more damage dealt at the expense of more damage taken.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@22043 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Add bludgeoning weapons of "the Brute", which do more damage at the expense
+of a sizable amount of AC. Do more damage, take more damage.
+artifacts
+Daniel Hawkins 2021-03-18
+
 Amend book message to use the prepare weapon scroll's face,
 per Nicholas Weeger's suggestion.
 messages
