--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Add faces to random messages.
+messages
+Nicolas Weeger 2021-03-21
+
 Add bludgeoning weapons of "the Brute", which do more damage at the expense
 of a sizable amount of AC. Do more damage, take more damage.
 artifacts
