Erase previously defined recipes. This solves duplicated recipes index warnings when 'make install' is done on the server while the 'arch' directory is symlinked to share.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@22084 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Erase previously defined recipes.
+This solves duplicated recipes index warnings when 'make install' is done on the server
+while the 'arch' directory is symlinked to share.
+formulae
+Nicolas Weeger 2021-04-20
+
 Add faces to random messages.
 messages
 Nicolas Weeger 2021-03-21
