New art for corpse. Moved old art to classic image set.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@22095 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+New art for corpse.
+This should be easier to use as a base for making different corpse images for goblins, angels, etc.
+Moved old image to classic image set.
+flesh/human/corpse.base.111.png
+flesh/human/corpse.clsc.111.png
+Daniel Hawkins 2021-04-22
+
 Erase previously defined recipes.
 This solves duplicated recipes index warnings when 'make install' is done on the server
 while the 'arch' directory is symlinked to share.
