Updated docs pointers and added more relevant info. Axed some deprecated info. Patch https://sourceforge.net/p/crossfire/patches/392/ by DraugTheWhopper
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@22096 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Updated docs pointers and added more relevant info. Axed some deprecated info.
+Patch https://sourceforge.net/p/crossfire/patches/392/
+README
+treasures.trs
+DraugTheWhopper
+
 New art for corpse.
 This should be easier to use as a base for making different corpse images for goblins, angels, etc.
 Moved old image to classic image set.
