Clean up formatting in formulae file. Patch https://sourceforge.net/p/crossfire/patches/394/ by DraugTheWhopper.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@22097 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Clean up formatting in formulae file.
+Patch https://sourceforge.net/p/crossfire/patches/394/
+formulae
+DraugTheWhopper
+
 Updated docs pointers and added more relevant info. Axed some deprecated info.
 Patch https://sourceforge.net/p/crossfire/patches/392/
 README
