Fix missing face for big galleon in classic face set.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@22101 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fix animation issue from a missing face in the classic faceset for big galleon.
+transport/biggalleon.clsc.x71.png
+Daniel Hawkins 2021-04-26
+
 New art to override the default corpse art for zombies and goblin.
 Added copies of classic corpse image so that image set gets a consistent corpse.
 flesh/goblin/goblin_corpse.*
