Rebalance gauntlet treasurelist. Move gauntlets to their own treasure list. Patch https://sourceforge.net/p/crossfire/patches/395/ by DraugTheWhopper.
git-svn-id: svn+ssh://svn.code.sf.net/p/crossfire/code/arch/trunk@22116 282e977c-c81d-0410-88c4-b93c2d0d6712

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Rebalance gauntlet treasurelist. Move gauntlets to their own treasure list.
+Patch https://sourceforge.net/p/crossfire/patches/395/
+armour/gauntlets/random_gauntlet.trs
+treasures.trs
+DraugTheWhopper
+
 Add special face for goblin's hand. Add a copy of human hand as classic image to preserve old
 appearance for that face set.
 flesh/goblin/goblin_hand.base.111.png
