--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fix text.
+spell/BlessCurse/spell_holy_possession.arc
+Nicolas Weeger 2021-05-12
+
 Rebalance gauntlet treasurelist. Move gauntlets to their own treasure list.
 Patch https://sourceforge.net/p/crossfire/patches/395/
 armour/gauntlets/random_gauntlet.trs
