--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Add faces for para-lightning, mud and water elemental residues
+monster/elemental/Para/para_lightning.face
+monster/elemental/Para/para_lightning_residue.base.111.png
+monster/elemental/Para/para_mud_residue.base.111.png
+monster/elemental/Para/para_water.face
+monster/elemental/Para/para_water_residue.base.111.png
+Nicolas Weeger 2021-06-05
+
 Exclude god avatars from books and knowledge
 gods/demihumans/gnarg_avatar.arc
 gods/demihumans/lythander_avatar.arc
