--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Rename 'fine gloves' to 'gloves' because of alchemy use
+Rename 'gloves' to 'steel gloves' to avoid duplicate name
+armour/gauntlets/gloves_w.arc
+Nicolas Weeger 2021-06-05
+
 Add faces for para-lightning, mud and water elemental residues
 monster/elemental/Para/para_lightning.face
 monster/elemental/Para/para_lightning_residue.base.111.png
