Add highlights and shadows to orange image in base set. Move unlit graphic to the classic face set.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Add lighting effects to orange image.
+Move old face to the classic faceset.
+food/produce/orange.*.111.png
+Daniel Hawkins 2021-08-15
+
 New weapon -- punching daggers
 Similar to regular daggers, but use the punching skill instead of
 one-handed weapons. And they come in pairs rather than individually.
