Visual adjustments to small buttons to clarify when it is pressed/unpressed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Twiddle with the pixels and lighting on small buttons
+Add untwiddled images to classic image set.
+connect/button_sma.*.png
+Daniel Hawkins 2021-08-15
+
 Add lighting effects to orange image.
 Move old face to the classic faceset.
 food/produce/orange.*.111.png
