New flat-perspective art for coif in the classic face set.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+New flat-perspective art for coif for the classic face set.
+armour/helmet/coif.clsc.111.png
+Daniel Hawkins 2021-08-15
+
 Twiddle with the pixels and lighting on small buttons
 Add untwiddled images to classic image set.
 connect/button_sma.*.png
