Add Gervais tiles for classic face set vials.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Added some Modified David Gervais tiles to be vials in the classic face set.
+potion/vial_*.clsc.111.png
+Daniel Hawkins 2021-09-03
+
 Redesigned small bulletwall images using Saiapatsu's
 earthwall graphics. Moved old images to the classic face set.
 wall/bulletwall/bul_wall_*.base.111.png
