Redraw trident images for base set, since the darkened version was hard to see on some floors. Worth noting that these are derived from the classic trident faces, for whenever (if ever) we figure out the licensing on our long-lived imagery.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Redraw the tridents to have some depth.
+The darker color I gave them earlier made them hard to see on some floors.
+Giving them a black outline and some lighting effects should resolve this.
+weapon/misc/trident.base.*.png
+Daniel Hawkins 2021-09-05
+
 Added some Modified David Gervais tiles to be vials in the classic face set.
 potion/vial_*.clsc.111.png
 Daniel Hawkins 2021-09-03
