--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Weaken divine shock without removing the godpower attacktype.
+Hopefully this is enough to make it a solution to every problem.
+Specifically, the changes are:
+grace 3 -> 4 (since the grace increase goes by doubling, this causes a >1 increase in cost at higher levels)
+dam 4 -> 3
+dam_modifier 3 -> 4 (This causes the damage to increase less quickly)
+spell/MovingBall/spell_divine_shock.arc
+Daniel Hawkins 2021-11-14
+
 Give 'mimic' the same client_type as a container so it appears at the same location
 in the player's inventory.
 monster/mimic/mimic.arc
